modify vendor login and register API